# ScaffoldingGenerator

./: .gitignore  LICENSE  Makefile  README.md  README.rst  ScaffoldingGenerator.csproj  ScaffoldingGenerator.sln  amsg.csproj  antlr4-runtime.pc  arch-env-setup.sh  meson.build  parser.cpp
src/: Options.cs  Program.cs  StlAscii.g4  amsg.cpp  amsg.glade  meson.build
src/ConsoleApplication/: ConsoleApplication.csproj  Program.cs
src/ConsoleApplication/DataStructures/: Point3DComparers.cs  Point3DTree.cs
src/ConsoleApplication/Extensions/: Extensions.cs
src/ConsoleApplication/GUI/: MainWindow.cs  MainWindow.glade  RenderWindow.cs  Shader.cs  Shader.vert  ToolWindow.cs
src/ConsoleApplication/Geometry/: Facet.cs  FloatTolerance.cs  Region.cs  Tolerance.cs
src/ConsoleApplication/IO/: StlAscii.g4  StlAsciiBaseVisitor.cs  StlAsciiLexer.cs  StlAsciiParser.cs  StlAsciiReader.cs  StlAsciiVisitor.cs  StlAsciiWriter.cs  StlBinaryReader.cs  StlBinaryWriter.cs  StlReader.cs  StlWriter.cs
src/ConsoleApplication/Mathematics/: Facet.cs  (+2 more)
src/DataStructures/: Point3Comparers.cs  Point3DComparers.cs  Point3DTree.cs  Point3Tree.cs
src/Extensions/: Extensions.cs  Point3DExtensions.cs
src/GUI/: RenderWindow.cs  Shader.cs  ToolWindow.cs  ToolWindow.glade
src/Geometry/: AngleConverter.cs  Facet.cs  FloatTolerance.cs  LineSegment3.cs  Mesh3.cs  Plane.cs  Plane3.cs  Point3.cs  Polygon3.cs  Polygon3D.cs
src/IO/: StlAscii.g4  StlAsciiBaseVisitor.cs  StlAsciiLexer.cs  StlAsciiParser.cs  StlAsciiReader.cs  StlAsciiVisitor.cs  StlAsciiWriter.cs  StlBinaryReader.cs  StlBinaryWriter.cs  StlReader.cs  StlWriter.cs
src/Math/: AngleConverter.cs  Line3D.cs  LineSegment3.cs  LineSegment3D.cs  Plane.cs  Point3.cs  Point3D.cs  Vector3D.cs
src/Mathematics/: Facet.cs  Tolerance.cs
(+45 files in other folders)
